Stopped sidescrolling on mobile version.

--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ p {
 
 body{
     background-color: var(--clr-primary);
+    overflow-x: hidden;
+    width: 100%;
     
 }
 
